# Warplane

./: .gitignore  README.md  meson.build
assets/data/: intro.txt  pause_instruction.txt
include/: Application.hpp  Game.hpp  SceneNode.hpp  TextNode.hpp  World.hpp  utilities.hpp  utilities.inl
include/GUI/: Button.hpp  Component.hpp  Container.hpp  Label.hpp  Logger.hpp
include/command/: Category.hpp  Command.hpp  CommandQueue.hpp
include/entity/: Aircraft.hpp  DataTable.hpp  Entity.hpp  Player.hpp  Projectile.hpp  SpriteNode.hpp
include/log/: Log.hpp
include/resources/: ResourceHolder.hpp  ResourceHolder.inl  ResourceIdentifier.hpp
include/states/: GameState.hpp  Introduction.hpp  LoadingState.hpp  MenuState.hpp  ParallelTask.hpp  PauseState.hpp  SettingState.hpp  State.hpp  StateIdentification.hpp  StateStack.hpp  StateStack.inl
include/textures/: ResourceHolder.hpp  ResourceHolder.inl  ResourceIdentifier.hpp
src/: Application.cpp  Game.cpp  SceneNode.cpp  TextNode.cpp  World.cpp  main.cpp  utilities.cpp
src/GUI/: Button.cpp  Component.cpp  Container.cpp  Label.cpp  Logger.cpp
src/command/: Command.cpp  CommandQueue.cpp
src/entity/: Aircraft.cpp  DataTable.cpp  Entity.cpp  Player.cpp  Projectile.cpp  SpriteNode.cpp
src/log/: Log.cpp
src/states/: GameState.cpp  Introduction.cpp  LoadingState.cpp  MenuState.cpp  ParallelTask.cpp  PauseState.cpp  SettingState.cpp  State.cpp  StateStack.cpp
